<resources>
    <string name="app_name">LostPet</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="lost_pet">Lost Pets</string>
    <string name="email">Email</string>
    <string name="owner_email">Owner email</string>
    <string name="password">Password</string>
    <string name="add">Add announcement</string>
    <string name="view_all">View all announcements</string>
    <string name="view_mine">View my announcements</string>
    <string name="view_random">View random pets</string>
    <string name="pet_name">Pet name</string>
    <string name="breed">Breed</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter location</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_image">Select Image</string>
    <string name="get_location">Get Location</string>


</resources>