<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_add"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:fontFamily="casual"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/pet_name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/edt_breed"
        />
    <EditText
        android:id="@+id/edt_breed"
        android:layout_width="0dp"
        android:fontFamily="casual"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="@dimen/default_space"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/breed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        />

    <EditText
        android:id="@+id/edt_location"
        android:layout_width="0dp"
        android:fontFamily="casual"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        android:hint="@string/enter_location"
        android:drawableLeft="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_breed"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.8" />


    <Button
        android:id="@+id/BSelectImage"
        android:layout_width="0dp"
        android:drawableLeft="@drawable/ic_pet"
        android:drawableRight="@drawable/ic_pet"
        android:layout_height="0dp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/select_image"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BSelect2"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/BSelect2"
        android:layout_width="0dp"
        android:drawableLeft="@drawable/ic_pet"
        android:drawableRight="@drawable/ic_pet"
        android:layout_height="0dp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/get_location"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_location"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.6" />

    <ImageView
        android:id="@+id/IVPreviewImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/BSelectImage"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BSelectImage"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/btn_addAnnouncement"
        android:layout_width="0dp"
        android:drawableLeft="@drawable/ic_pet"
        android:drawableRight="@drawable/ic_pet"
        android:fontFamily="casual"
        android:layout_height="0dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/add"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IVPreviewImage"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintWidth_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>