<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/default_space"
    android:layout_height="wrap_content"
    android:background="@drawable/background_item"
    android:padding="@dimen/default_space">

    <TextView
        android:id="@+id/tv_pet_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/pet_name"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/tv_breed"
        android:layout_width="0dp"
        android:background="@color/blue"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        app:layout_constraintBottom_toTopOf="@id/tv_location"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pet_name"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/breed"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_marginLeft="50dp"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_breed"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/location"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_marginLeft="50dp"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        tools:text="@string/owner_email"
        android:layout_marginStart="50dp" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <ImageView
        android:id="@+id/IVImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>