<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/edt_email"
        android:fontFamily="casual"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/edt_password"
        />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:fontFamily="casual"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="@dimen/default_space"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:drawableLeft="@drawable/ic_pet"
        android:drawableRight="@drawable/ic_pet"
        android:fontFamily="casual"
        android:layout_height="0dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/register"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintVertical_bias="0.031"
        app:layout_constraintWidth_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>