<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:fontFamily="casual"
        android:layout_height="0dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/add"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.06" />

    <Button
        android:id="@+id/btn_view_all"
        android:layout_width="0dp"
        android:fontFamily="casual"
        android:layout_height="0dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/view_all"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_add"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_view_mine"
        android:layout_width="0dp"
        android:fontFamily="casual"
        android:layout_height="0dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/view_mine"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_view_all"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_sing_out"
        android:layout_width="0dp"
        android:fontFamily="casual"
        android:layout_height="0dp"
        android:background="@drawable/selector_button_background_orange"
        android:text="@string/sign_out"
        android:textColor="@color/selector_white_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_view_mine"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintWidth_percent="0.7" />

    <ProgressBar
        android:id="@+id/pb_loading_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>